# Morphing

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
demo/: template.mesh
src/: bucket.c  compil.date  elas.c  hash.c  inout.c  intelt.c  locelt.c  main.c  minimization.c  morphing.h  morphing_2d.c  morphing_3d.c  scalem.c  tools.c
